--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="bit.ly/devansh_007">Resume</a>
+                </li>
             </ul>
             
         </div>
