resume added new link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="bit.ly/devansh_007">Resume</a>
+                    <a class="nav-link" href="https://drive.google.com/file/d/1BLrn_YwnWtAqCdW9SQj16ZGP1Byd2H0P/view">Resume</a>
                 </li>
             </ul>
             
@@ -413,7 +413,7 @@
           <a href="https://www.linkedin.com/in/devansh-chowdhury-a41318192/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://github.com/Devanshchowdhury2212" target="_blank"><i class="fa-brands fa-github"></i></a>
           <a href="https://twitter.com/BLANK82589933" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <!-- <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a> -->
           <!-- <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a> -->
       </div>
   </div>
